fixed navbar not showing in contact us page and added shadow over the map

--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -7,3 +7,12 @@
   width: 150px;
   font-size: 18px;
 }
+
+.shadow {
+  background: #615e5e;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  position: absolute;
+  z-index: 1;
+}
